--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 <p>Dit jaar gaan onze lessen tijdens de paardenmarkt (maandag 1 september) gewoon door! </p>
 </section><section><h1 id="ballet-volwassenen-intermediate">Ballet volwassenen Intermediate</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
-Op maandagochtend starten we een korte cursus ballet voor volwassenen,  dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#x62;&#x61;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#x6e;&#x6c;">&#98;&#97;&#98;&#x73;&#64;&#x62;&#x61;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#x6e;&#x6c;</a></p>
+Op maandagochtend starten we een nieuwe les ballet voor volwassenen,  dit is een les voor dansers met al eerdere balletervaring. 
+Aanmelden kan via de mail: <a href="mailto:&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;">&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;</a></p>
 </section><section><h1 id="ballet-beginners-15">Ballet beginners 15+</h1>
 <p><img src="resources/image/algemeen/KLassiekballettieners.jpg" alt="Ballet tieners bij Babs Balletschool"> 
 Voor dansers die altijd al ballet hebben willen leren, of hun danstechniek willen versterken met een klassieke basis. 
-Start vanaf 1 september 16:45. Proefles is gratis. Aanmelden via de mail: <a href="mailto:&#98;&#97;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#x6c;">&#98;&#97;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#x6c;</a></p>
+Start vanaf 1 september 16:45. Proefles is gratis. Aanmelden via de mail: <a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
