--- a/index.html
+++ b/index.html
@@ -39,22 +39,16 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
 <p> Rooster seizoen 25/26 
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2025-2026 bij Babs Balletschool"> <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe></p>
-<p> Inschrijven voor seizoen 25-26:
-<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-</section><section><h1 id="open-dag">Open Dag</h1>
-<p>Op zondag 31 augustus start bij theater de KiK het nieuwe culturele seizoen. Natuurlijk zijn wij er ook bij en zijn er workshops voor kleuters/kinderen en volwassenen. Daarnaast is er een leuke presentatie modern en jazzballet om 15:00 in de theaterzaal. Komt dat zien!
-<img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="OpenDag Babs Balletschool"> 
-<a href="https://theaterdekik.nl/acties/opening-cultureel-seizoen/">Programma</a></p>
-</section><section><h1 id="paardenmarkt-elst">Paardenmarkt Elst</h1>
-<p>Dit jaar gaan onze lessen tijdens de paardenmarkt (maandag 1 september) gewoon door! </p>
-</section><section><h1 id="ballet-volwassenen-intermediate">Ballet volwassenen Intermediate</h1>
+</section><section><h1 id="inschrijven-voor-seizoen-25-26">Inschrijven voor seizoen 25-26:</h1>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
+</section><section><h1 id="ballet-volwassenen-intermediate">Ballet Volwassenen Intermediate</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend starten we een nieuwe les ballet voor volwassenen,  dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#98;&#x61;&#98;&#x73;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;">&#x62;&#x61;&#98;&#x73;&#64;&#98;&#x61;&#98;&#x73;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;</a></p>
-</section><section><h1 id="ballet-beginners-15">Ballet beginners 15+</h1>
+Aanmelden kan via de mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;">&#x62;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;</a></p>
+</section><section><h1 id="ballet-beginners-14">Ballet beginners 14+</h1>
 <p><img src="resources/image/algemeen/KLassiekballettieners.jpg" alt="Ballet tieners bij Babs Balletschool"> 
 Voor dansers die altijd al ballet hebben willen leren, of hun danstechniek willen versterken met een klassieke basis. 
-Start vanaf 1 september 16:45. Proefles is gratis. Aanmelden via de mail: <a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;">&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;</a></p>
+Proefles is gratis. Aanmelden proefles via de mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
@@ -65,7 +59,7 @@ Schrijf je nu in voor de nieuwe lessen Pilates. (vanaf september 2025). </p>
 <p><img src="resources/image/algemeen/Twinkeltje.jpg" alt="Twinkeltje"> 
 Kijk voor je gaat shoppen even naar de kleding voorschriften!
 <a href="https://www.babsballetschool.nl/kleding.html">Kleding</a>
-Ik heb ook veel roze balletpakjes, jazzballetschoenen, ballet accessoires en 2e hands balletkleding te koop. Half september kom ik weer langs met &#39;Twinkeltje&#39;.</p>
+Half september kom ik weer langs met &#39;Twinkeltje&#39;. Wellicht zit er iets voor je bij.</p>
 </section><section><h1 id="voorstelling-samen">Voorstelling: SAMEN</h1>
 <p><img src="resources/image/algemeen/SAMEN%202025.jpg" alt="dansvoorstelling SAMEN Babs Balletschool">
 Het was een succes en de leerlingen hebben staan stralen! We zijn ontzettend trots. 
