--- a/hoeveel.html
+++ b/hoeveel.html
@@ -48,7 +48,7 @@
 
 
 
-<tr><td>extra Spitzen:</td><td> 15 min. €60,- per jaar - €6,- per maand (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
+<tr><td>Spitzen:</td><td> 15 min. €60,- per jaar - €6,- per maand (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
 </table>
 
 
@@ -70,7 +70,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> 
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#98;&#97;&#98;&#115;&#98;&#97;&#108;&#108;&#101;&#x74;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#x62;&#97;&#98;&#x73;&#x40;&#98;&#97;&#98;&#115;&#98;&#97;&#108;&#108;&#101;&#x74;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> 
 Babs Balletschool is ook deelnemer aan de Gelrepas:  <a href="https://www.gelrepas.nl/aanbod/5000-babs-balletschool">https://www.gelrepas.nl/aanbod/5000-babs-balletschool</a></p>
 </section>
         </main>
